# owl-afk

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
docs/: planning-lessons-learned.md
docs/learnings/: 2026-01-10-polling-and-deduplication.md  2026-01-10-standalone-polling-and-deduplication.md  2026-01-11-auto-approve-notify-implementation.md  2026-01-11-chain-handler-missing-import-bug.md  planning-lessons-learned.md
docs/plans/: 2025-01-04-chain-approval-engine-implementation.md  2025-01-04-chain-approval-engine.md  2025-01-07-interactive-wizard-design.md  2025-01-07-rules-ui-design.md  2025-01-08-ui-improvements-design.md  2026-01-03-pyafk-design.md  2026-01-03-pyafk-implementation.md  2026-01-05-code-quality-fixes.md  2026-01-06-captain-hook-integration.md  2026-01-09-architecture-refactor.md  2026-01-10-menu-redesign-implementation.md  2026-01-10-menu-redesign.md  2026-01-10-pyafk-audit.md  2026-01-11-auto-approve-notify.md  2026-01-11-safe-defaults-design.md  2026-01-11-telegram-timeout-fixes.md  2026-02-18-hawk-v2-integration-plan.md
extras/captain-hook/: README.md  install.sh
extras/captain-hook/hooks/post_tool_use/: pyafk.sh
extras/captain-hook/hooks/pre_tool_use/: pyafk.sh
extras/captain-hook/hooks/stop/: pyafk.sh
extras/captain-hook/hooks/subagent_stop/: pyafk.sh
extras/hawk-hooks/: README.md
hooks/: owl-session-end.sh  owl-stop.sh  owl-subagent-stop.sh
src/owl/: __init__.py  __main__.py  fast_path.py
src/owl/cli/: __init__.py  __main__.py  commands.py  helpers.py  install.py
src/owl/cli/ui/: __init__.py  interactive.py  menu.py  panels.py
src/owl/core/: __init__.py  command_parser.py  manager.py  poller.py  presets.py  rules.py  safe_defaults.py  storage.py
src/owl/core/handlers/: __init__.py  approval.py  base.py  batch.py  chain.py  dispatcher.py  feedback.py  registry.py  rules.py  stop.py  subagent.py  utils.py
src/owl/data/presets/: cautious.txt  permissive.txt  standard.txt
src/owl/hooks/: __init__.py  compact.py  handler.py  permission.py  posttool.py  pretool.py  response.py  runner.py  session.py  stop.py  subagent.py
src/owl/hooks_data/: owl-permission-request.sh  owl-post-tool-use.sh  owl-pre-compact.sh  owl-pre-tool-use.sh  owl-session-start.sh
src/owl/notifiers/: __init__.py  base.py  console.py  telegram.py
src/owl/utils/: __init__.py  config.py  constants.py  debug.py  exceptions.py  formatting.py  languages.py  pattern_generator.py  results.py  storage_helpers.py
src/pyafk/: __init__.py  __main__.py  cli.py  daemon.py  fast_path.py
src/pyafk/cli/: __init__.py  __main__.py  commands.py  helpers.py  install.py  interactive.py  ui.py
src/pyafk/cli/ui/: __init__.py  base.py  interactive.py  menu.py  panels.py
src/pyafk/core/: __init__.py  command_parser.py  manager.py  poller.py  rules.py  safe_defaults.py  storage.py
src/pyafk/core/handlers/: __init__.py  approval.py  base.py  batch.py  chain.py  dispatcher.py  feedback.py  registry.py  rules.py  stop.py  subagent.py  utils.py
src/pyafk/data/: safe_defaults.txt
src/pyafk/hooks/: __init__.py  compact.py  handler.py  permission.py  posttool.py  pretool.py  runner.py  session.py  stop.py  subagent.py
src/pyafk/notifiers/: __init__.py  base.py  console.py  telegram.py
src/pyafk/utils/: __init__.py  config.py  constants.py  debug.py  exceptions.py  formatting.py  pattern_generator.py  storage_helpers.py
tests/: __init__.py  conftest.py  test_chain_approval_integration.py  test_cli.py  test_command_parser.py  test_complex_chain_scenarios.py  test_config.py  test_exceptions.py  test_fast_path.py  test_formatting.py  test_highlighting_integration.py  test_hooks.py  test_install.py  test_integration.py  test_languages.py  test_manager.py  test_notifiers.py  test_poller.py  test_posttool_results.py  test_presets.py  test_results.py  test_rules.py  test_storage.py  test_storage_helpers.py  test_storage_lookup.py  test_telegram.py  test_wrapper_chain_flow.py
tests/core/handlers/: test_approval.py  test_base.py  test_batch.py  test_dispatcher.py  test_feedback.py  test_rules.py  test_stop.py  test_subagent.py  test_utils.py
tests/helpers/: fake_telegram.py
tests/hooks/: test_response.py
