[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyafk"
version = "0.2.0"
description = "Remote approval system for Claude Code via Telegram"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "pkronstrom" }]
dependencies = [
    "aiosqlite>=0.20.0",
    "aiofiles>=23.0.0",
    "httpx>=0.28.0",
    "readchar>=4.0.0",
    "rich>=13.0.0",
    "simple-term-menu>=1.6.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.scripts]
pyafk = "pyafk.cli:cli_main"
afk = "pyafk.cli:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyafk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src/pyafk"]

# Utility modules - relaxed checking (to be cleaned up later)
[[tool.mypy.overrides]]
module = [
    "pyafk.utils.debug",
    "pyafk.utils.config",
    "pyafk.fast_path",
    "pyafk.hooks.*",
    "pyafk.notifiers.base",
    "pyafk.notifiers.console",
    "pyafk.core.command_parser",
    "pyafk.core.manager",
    "pyafk.cli",
    "pyafk.cli.*",
]
ignore_errors = true
