[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owl-afk"
version = "0.3.1"
description = "Remote approval system for Claude Code via Telegram"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "pkronstrom" }]
dependencies = [
    "aiosqlite>=0.20.0",
    "aiofiles>=23.0.0",
    "httpx>=0.28.0",
    "readchar>=4.0.0",
    "rich>=13.0.0",
    "simple-term-menu>=1.6.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.scripts]
owl = "owl.cli:cli_main"
afk = "owl.cli:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/owl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src/owl"]

# Utility modules - relaxed checking (to be cleaned up later)
[[tool.mypy.overrides]]
module = [
    "owl.utils.debug",
    "owl.utils.config",
    "owl.fast_path",
    "owl.hooks.*",
    "owl.notifiers.base",
    "owl.notifiers.console",
    "owl.core.command_parser",
    "owl.core.manager",
    "owl.cli",
    "owl.cli.*",
]
ignore_errors = true
